--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,108 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
-  </head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <style>
+      body {
+    font-family: Arial, sans-serif;
+}
 
+.hamburger {
+    display: none;
+    font-size: 30px;
+    cursor: pointer;
+}
+
+.sidebar {
+    height: 100%;
+    width: 250px;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #80ffff;
+    overflow-x: hidden;
+    padding-top: 20px;
+    transition: 0.5s;
+}
+.sidebar a:first-child{
+  margin-top:50%;
+  font-size:2.5rem;
+  font-weight:bolder;
+  color:white;
+}
+.sidebar a {
+    padding: 10px 15px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    text-align:center;
+    transition: 0.3s;
+}
+
+.sidebar a:hover {
+    color: #f1f1f1;
+}
+
+.content {
+    margin-left: 250px;
+    padding: 20px;
+}
+.content{
+    padding-top:0px;
+    padding-right:0px;
+    padding-left:0px;
+}
+.navbar{
+    top:0;
+}
+@media screen and (max-width: 768px) {
+    .sidebar {
+        width: 0;
+        overflow-y: hidden;
+    }
+
+    .hamburger {
+        display: block;
+        margin: 20px;
+    }
+
+    .content {
+        margin-left: 0;
+    }
+}
+    </style>
+  </head>
   <body>
-    <%= yield %>
+    <header>
+<div class="sidebar" id="sidebar">
+    <a href="/">TUMBLER</a>
+    <a href="#">Home</a>
+    <a href="#">Make Post</a>
+    <a href="#">Login</a>
+    <a href="#">Signup</a>
+    <a href="#">Logout</a>
+</div>
+    </header>
+    <div class="content">
+        <nav class="navbar navbar-light navbar-expand-lg" style="background-color: #e3f2fd;">
+      <div class="hamburger" onclick="toggleSidebar()">&#9776;</div>
+        <span class="navbar-brand mb-0 mt-0 h1 ml-5">Post Feed</span>
+    </nav>
+        <div class="container">
+        <%= yield %>
+        </div>
+    </div>
   </body>
+  <script>
+          function toggleSidebar() {
+          var sidebar = document.getElementById("sidebar");
+          if (sidebar.style.width === '250px') {
+              sidebar.style.width = '0';
+          } else {
+              sidebar.style.width = '250px';
+          }
+      }
+  </script>
 </html>
