--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,7 @@
-<h1>This is index page</h1>
+<br>
 <% @posts.each do |post| %>
-<p><%= post.title %></p>
-<p><%= post.content %></p>
+<h2 class="card-title text-primary mb-2"><%= link_to "#{post.title}", post %></h2>
+<small>Created At <%= time_ago_in_words(post.created_at) %> ago</small>
+<p class="card-text mt-3"><%= truncate(post.content, length: 400) %></p>
+<hr>
 <% end %>
