--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -86,7 +86,7 @@
 <div class="sidebar" id="sidebar">
     <a href="/">TUMBLER</a>
     <a href="#">Home</a>
-    <a href="#">Make Post</a>
+    <%= link_to 'Make Post',  new_post_path%>
     <a href="#">Login</a>
     <a href="#">Signup</a>
     <a href="#">Logout</a>
@@ -96,7 +96,12 @@
         <nav class="navbar navbar-light navbar-expand-lg" style="background-color: #e3f2fd;">
       <div class="hamburger" onclick="toggleSidebar()">&#9776;</div>
         <span class="navbar-brand mb-0 mt-0 h1 ml-5">Post Feed</span>
-    </nav>
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item active">
+        <%= link_to 'Make Post',new_post_path,class:"btn btn-outline-info float-right"%>
+      </li>
+      </ul>
+            </nav>
         <div class="container">
         <%= yield %>
         </div>
