--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,7 +5,25 @@
     <h2 class="card-title font-weight-bold text-primary"><%= @post.title %></h2>
     <p>Created <%= time_ago_in_words(@post.created_at) %> ago | <%= link_to "Edit",edit_post_path(@post)%> | <%= link_to "Delete",@post,data: {turbo_method: 'delete', turbo_confirm: "Are you sure"}%></p>
     <p class="card-text"><%= @post.content%></p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+    <% if @post.comments.present? %>
+      <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+      <%= @post.comments.count%> Comments
+    </a>
+    <% end %>
+  <a class="btn btn-success" data-toggle="collapse" href="#collapseExample1" role="button" aria-expanded="false" aria-controls="collapseExample">
+    Leave a comment
+  </a>
+  <div class="collapse mt-3" id="collapseExample">
+  <div class="card card-body">
+    <%= render @post.comments%>
+  </div>
+  </div>
+  <div class="collapse mt-3" id="collapseExample1">
+  <div class="card card-body">
+    <h3>Leave a Comment</h3>
+    <%= render "comments/form" %>
+  </div>
+  </div>
   </div>
   <div class="card-footer text-muted">
     <span>Updated <%= time_ago_in_words(@post.updated_at) %> ago</span>
