--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,6 @@
 <h3 class="pl-2"><%=comment.body %></h3>
-<p style="font-size:1rem">--posted by <strong><%= comment.name %></strong> at <%=time_ago_in_words(comment.created_at) %> <span class="float-right"><%= link_to 'Delete Comment',[comment.post, comment],data: {turbo_method: 'delete', turbo_confirm: "Are you sure"},class:"btn btn-danger"%></span></p>
-
+<p style="font-size:1rem">--posted by <strong><%= comment.name %></strong> at <%=time_ago_in_words(comment.created_at) %></p>
+<% if user_signed_in? %>
+<span class="float-right"><%= link_to 'Delete Comment',[comment.post, comment],data: {turbo_method: 'delete', turbo_confirm: "Are you sure"},class:"btn btn-danger"%></span>
+<% end %>
 <hr>
