--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,7 +3,9 @@
   <h5 class="card-header">Post By Raj</h5>
   <div class="card-body">
     <h2 class="card-title font-weight-bold text-primary"><%= @post.title %></h2>
+    <% if user_signed_in? %>
     <p>Created <%= time_ago_in_words(@post.created_at) %> ago | <%= link_to "Edit",edit_post_path(@post)%> | <%= link_to "Delete",@post,data: {turbo_method: 'delete', turbo_confirm: "Are you sure"}%></p>
+    <% end  %>
     <p class="card-text"><%= @post.content%></p>
     <% if @post.comments.present? %>
       <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
